# Advanced-Rust

./: .gitignore  README.md  prj.conf
TP1/: README.rst  prj.conf
TP1/src/: main.c
TP2/dm163_project/: CMakeLists.txt  prj.conf
TP2/dm163_project/dm163_module/zephyr/: dm163.c
TP2/dm163_project/src/: main.c
boards/: b_l4s5i_iot01a.overlay
check_elf/: Cargo.toml
check_elf/examples/: check_elf.rs
check_elf/fuzz/: Cargo.toml
check_elf/fuzz/fuzz_targets/: fuzz_target_1.rs
check_elf/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
pwdchk/: .gitignore  Cargo.toml
pwdchk/src/: account.rs  error.rs  hibp.rs  lib.rs  main.rs
pwdchk/src/scanner/: mod.rs  net.rs
src/: account.rs  main.c  main.rs
tp-alloc/: Cargo.toml
tp-alloc/.cargo/: config.toml
tp-alloc/examples/: tp-alloc.rs
tp-alloc/src/: lib.rs
tp-alloc/tests/: alloc.rs
tp_macro/: Cargo.toml
tp_macro/src/: main.rs
