[package]
name = "pwdchk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
macros = { path = "../macros" }
futures = "0.3.25"
ipnet = "2.7.0"
rayon = "1.6.1"
reqwest = { version = "0.11.13", features = ["blocking"] }
sha1 = "0.10.5"
tokio = { version = "1.23.0", features = ["full"] }

[dev-dependencies]
proptest = "1.0.0"
